# MinerU-PDFScanner

./: .gitignore  CHANGELOG.md  README.md  bun.lockb  index.html  package.json  release-please-config.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: doc.yml  publish.yml  release.yml
doc/website/: bun.lockb  package.json  postcss.config.js
doc/website/.vitepress/: config.mts
doc/website/src/: changelogs.md  index.md
src/: app.tsx  bootstrap.ts  global.css  layout.tsx  main.tsx  not-found.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/migration/: mod.rs
src/components/: Copyright.tsx  Menus.tsx  Navigator.tsx  Page.tsx  QuickLink.tsx  ThemeButton.tsx
src/hooks/: useScrollPage.tsx
src/lib/: QueryQueue.ts  config.ts  db.ts  storage.ts  updater.tsx
src/pages/createTask/: index.tsx
src/pages/setting/: index.tsx
src/pages/task/: index.tsx
src/pages/task/preview/: Markdown.tsx  PDFViewer.tsx  PDFViewerSkeleton.tsx  index.tsx  state.tsx
src/service/: config.service.ts  task.model.ts  task.repository.ts  task.service.ts
